# satellite-mission-compiler

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  pyproject.toml
docs/: 07_installation_matrix.md  local-dev-troubleshooting.md
docs/experiments/: 2026-06-09-dra-quota-cascade-output.md
manifests/k8s/kueue/dra-paper-test/: 00-kueue-configuration-patch.yaml  00-original-kueue-manager-config-backup.yaml  01-namespace-and-queue.yaml  02-resourceclaimtemplate.yaml  03-jobs.yaml  README.md
scripts/: install_argo.sh
