[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbital-mission-compiler"
version = "0.3.0"
description = "Mission-plan-aware workflow compilation scaffold inspired by ORCHIDE"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML==6.0.2",
  "pydantic==2.12.5",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "pytest-cov==6.0.0",
  "ruff==0.15.8",
  "mypy==1.16.0",
  "types-PyYAML==6.0.12.20250915",
]
mcp = [
  "fastmcp==3.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
